--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rpi-cam-wrapper",
-  "version": "0.0.0",
+  "name": "rpi-cam",
+  "version": "0.0.1",
   "description": "",
   "author": "Mattias Erming",
   "repository": {
