--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.0.3",
   "description": "",
   "author": "Mattias Erming",
+  "scripts": {
+    "test": "tape test/**/*.js | faucet"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/erming/rpi-cam"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "faucet": "0.0.1",
+    "tape": "^3.5.0"
+  }
 }
